# onedrive-pipe-poc

./: .env.example  .gitignore  .infisical.json  .pre-commit-config.yaml  README.md  docker-compose.yml  mise.toml  pyproject.toml
app/: api.py  auth.py  settings.py
app/etl/: __init__.py
