[project]
name = "onedrive-pipe-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "ngrok>=1.7.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.4",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
